force-app/main/default/objects/Contact/fields/Adjust_Ded_Code_Variable__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Ded_Code_Variable__c</fullName>
    <label>Adjust Ded Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>