force-app/main/default/objects/Contact/fields/ADP_Number__c.field-meta.xml
<CustomField>
    <fullName>ADP_Number__c</fullName>
    <label>ADP Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>