force-app/main/default/objects/Contact/fields/Allowance_Driver_Count__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Driver_Count__c</fullName>
    <formula>Account.Allowance_Driver_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Driver Count</label>
    <type>Text</type>
</CustomField>