force-app/main/default/objects/Contact/fields/Approve_Mileages__c.field-meta.xml
<CustomField>
    <fullName>Approve_Mileages__c</fullName>
    <label>Approve Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>