force-app/main/default/objects/Contact/fields/Average_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Average_Mileage__c</fullName>
    <formula>Total_Mileage__c / No_reimbursement_current_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>