force-app/main/default/objects/Contact/fields/Average_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Average_Reimbursement__c</fullName>
    <formula>Total_reimbursment__c /  No_reimbursement_current_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>