force-app/main/default/objects/Contact/fields/Batch_ID_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Batch_ID_Fixed__c</fullName>
    <label>Batch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>