force-app/main/default/objects/Contact/fields/Batch_Variable_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Variable_ID__c</fullName>
    <label>Batch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>