force-app/main/default/objects/Contact/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <label>Branch Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>