force-app/main/default/objects/Contact/fields/Business_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Business_Mileage__c</fullName>
    <label>Business Mileage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>