force-app/main/default/objects/Contact/fields/Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose__c</fullName>
    <label>Business Purpose</label>
    <length>55</length>
    <type>Text</type>
</CustomField>