force-app/main/default/objects/Contact/fields/Car_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Car_Allowance_Amount__c</fullName>
    <formula>Account.Car_Allowance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Allowance Amount</label>
    <type>Text</type>
</CustomField>