force-app/main/default/objects/Contact/fields/Car_Image__c.field-meta.xml
<CustomField>
    <fullName>Car_Image__c</fullName>
    <label>Car Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>