force-app/main/default/objects/Contact/fields/Co_Code__c.field-meta.xml
<CustomField>
    <fullName>Co_Code__c</fullName>
    <label>Co. Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>