force-app/main/default/objects/Contact/fields/Contact_Picture__c.field-meta.xml
<CustomField>
    <fullName>Contact_Picture__c</fullName>
    <description>Picture of Contact</description>
    <label>Contact Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>