force-app/main/default/objects/Contact/fields/Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Level__c</fullName>
    <label>Current Level</label>
    <type>Date</type>
</CustomField>