force-app/main/default/objects/Contact/fields/Deactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_By__c</fullName>
    <label>Deactivated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>