force-app/main/default/objects/Contact/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <description>this field is use for Design Air account.</description>
    <label>Dept</label>
    <length>25</length>
    <type>Text</type>
</CustomField>