force-app/main/default/objects/Contact/fields/Driver_Type__c.field-meta.xml
<CustomField>
    <fullName>Driver_Type__c</fullName>
    <label>Driver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver - Part Time</fullName>
            </value>
            <value>
                <fullName>Driver - Full Time</fullName>
            </value>
            <value>
                <fullName>Driver - Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>