force-app/main/default/objects/Contact/fields/Employee_Netchex_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Netchex_Id__c</fullName>
    <label>Employee Netchex Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>