force-app/main/default/objects/Contact/fields/Enable_Reports__c.field-meta.xml
<CustomField>
    <fullName>Enable_Reports__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable_Reports</label>
    <type>Checkbox</type>
</CustomField>