force-app/main/default/objects/Contact/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>