force-app/main/default/objects/Contact/fields/Imputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Imputed_Amount__c</fullName>
    <label>Imputed Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>