force-app/main/default/objects/Contact/fields/Insurance_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Attachment_Id__c</fullName>
    <label>Insurance Attachment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>