force-app/main/default/objects/Contact/fields/Insurance_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Declaration__c</fullName>
    <formula>IF(Insurance_Attachment_Id__c &lt;&gt; &apos;&apos; , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Declaration</label>
    <type>Text</type>
</CustomField>