force-app/main/default/objects/Contact/fields/Insurance_Declaration_Page__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Declaration_Page__c</fullName>
    <formula>IF(Insurance_Attachment_Id__c &lt;&gt; &apos;&apos; , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Declaration Page</label>
    <type>Checkbox</type>
</CustomField>