force-app/main/default/objects/Contact/fields/Is_Driver_In_Triplog__c.field-meta.xml
<CustomField>
    <fullName>Is_Driver_In_Triplog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Driver In Triplog</label>
    <type>Checkbox</type>
</CustomField>