force-app/main/default/objects/Contact/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <formula>IF(ISNULL(Deactivated_Date__c), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isActive</label>
    <type>Text</type>
</CustomField>