force-app/main/default/objects/Contact/fields/isCommunityUser__c.field-meta.xml
<CustomField>
    <fullName>isCommunityUser__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isCommunityUser</label>
    <type>Checkbox</type>
</CustomField>