force-app/main/default/objects/Contact/fields/Jan__c.field-meta.xml
<CustomField>
    <fullName>Jan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jan</label>
    <type>Checkbox</type>
</CustomField>