force-app/main/default/objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Territory Manager</fullName>
            </value>
            <value>
                <fullName>Director of Product Strategy &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>CFO/COO</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Forced Air Product Manager</fullName>
            </value>
            <value>
                <fullName>Director of Product Strategy &amp; Technical Support</fullName>
            </value>
            <value>
                <fullName>Hydronics Application Specialist</fullName>
            </value>
            <value>
                <fullName>Commercial Sales Manager</fullName>
            </value>
            <value>
                <fullName>Accounting Manager</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Director of Human Resources</fullName>
            </value>
            <value>
                <fullName>Design Engineer Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>