force-app/main/default/objects/Contact/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <defaultValue>false</defaultValue>
    <label>July</label>
    <type>Checkbox</type>
</CustomField>