force-app/main/default/objects/Contact/fields/Last_Reimbursement_Created__c.field-meta.xml
<CustomField>
    <fullName>Last_Reimbursement_Created__c</fullName>
    <label>Last Reimbursement Created</label>
    <length>10</length>
    <type>Text</type>
</CustomField>