force-app/main/default/objects/Contact/fields/Maintenance_and_Tires__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_and_Tires__c</fullName>
    <label>Maintenance and Tires</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>