force-app/main/default/objects/Contact/fields/Manager_External_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_External_Email__c</fullName>
    <label>Manager External Email</label>
    <type>Email</type>
</CustomField>