force-app/main/default/objects/Contact/fields/Max_IRS_Allowable__c.field-meta.xml
<CustomField>
    <fullName>Max_IRS_Allowable__c</fullName>
    <label>Max IRS Allowable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>