force-app/main/default/objects/Contact/fields/Meeting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Contact__c</fullName>
    <label>Meeting Contact</label>
    <length>55</length>
    <type>Text</type>
</CustomField>