force-app/main/default/objects/Contact/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <label>Monthly Mileages</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>