force-app/main/default/objects/Contact/fields/Monthly_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Mileage__c</fullName>
    <label>Monthly Mileage</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>