force-app/main/default/objects/Contact/fields/Monthly_Mileage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Mileage_Limit__c</fullName>
    <inlineHelpText>Manager selects how many miles can be driven for auto approval.</inlineHelpText>
    <label>Monthly Mileage Limit</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>