force-app/main/default/objects/Contact/fields/MPG__c.field-meta.xml
<CustomField>
    <fullName>MPG__c</fullName>
    <label>MPG</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>