force-app/main/default/objects/Contact/fields/MVR_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>MVR_Attachment_Id__c</fullName>
    <label>MVR Attachment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>