force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(ISBLANK(FirstName),&quot;&quot;,FirstName)+&quot; &quot;+IF(ISBLANK(LastName),&quot;&quot;,LastName)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>