force-app/main/default/objects/Contact/fields/Odometer_Editable__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Odometer_Editable</label>
    <type>Checkbox</type>
</CustomField>