force-app/main/default/objects/Contact/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>55</length>
    <type>Text</type>
</CustomField>