force-app/main/default/objects/Contact/fields/Owed__c.field-meta.xml
<CustomField>
    <fullName>Owed__c</fullName>
    <label>Owed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>