force-app/main/default/objects/Contact/fields/Packet__c.field-meta.xml
<CustomField>
    <fullName>Packet__c</fullName>
    <label>Packet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Being Generated</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
                <default>true</default>
                <label>Sent for Signature</label>
            </value>
            <value>
                <fullName>Waiting for Signature</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>