force-app/main/default/objects/Contact/fields/Pay_Number__c.field-meta.xml
<CustomField>
    <fullName>Pay_Number__c</fullName>
    <label>Pay #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>