force-app/main/default/objects/Contact/fields/Sage_100_ID__c.field-meta.xml
<CustomField>
    <fullName>Sage_100_ID__c</fullName>
    <label>Sage 100 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>