force-app/main/default/objects/Contact/fields/send_deactivation_Email__c.field-meta.xml
<CustomField>
    <fullName>send_deactivation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do You Want to Send Deactivation Email ?</label>
    <type>Checkbox</type>
</CustomField>