force-app/main/default/objects/Contact/fields/Sent_Tax_Liability_report_to_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sent_Tax_Liability_report_to_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Tax Liability report to Admin</label>
    <type>Checkbox</type>
</CustomField>