force-app/main/default/objects/Contact/fields/Special_Action__c.field-meta.xml
<CustomField>
    <fullName>Special_Action__c</fullName>
    <label>Special Action</label>
    <length>100</length>
    <type>Text</type>
</CustomField>