force-app/main/default/objects/Contact/fields/Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Tax_Bracket__c</fullName>
    <label>Tax Bracket</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>