force-app/main/default/objects/Contact/fields/Tax_Calculation_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculation_Year__c</fullName>
    <description>Tax Calculation Year</description>
    <inlineHelpText>Tax Calculation Year</inlineHelpText>
    <label>Tax Calculation Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>