force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>