force-app/main/default/objects/Contact/fields/Total_Attachements__c.field-meta.xml
<CustomField>
    <fullName>Total_Attachements__c</fullName>
    <description>Total Attachements</description>
    <inlineHelpText>Total Attachements</inlineHelpText>
    <label>Total Attachements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>