force-app/main/default/objects/Contact/fields/Total_Fixed_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Fixed_Costs__c</fullName>
    <label>Total Fixed Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>